--- a/zapier.Rmd
+++ b/zapier.Rmd
@@ -4,11 +4,14 @@ author: "Reza"
 date: "March 16, 2016"
 output: html_document
 ---
-Dear l;fkks
+Dear 
 
 I am doing the last steps of my doctorate in mathematics. I have been doing research and teaching in the my field of study from the time of master study. Alongside I did cooperate with with experts of other fields including economists and urban planners.
 
-To name some, I developed an algorithm for assessing accessibility in a big city using the big graphs and programmed it in MatLab. I am familiar with remote sensing techniques and help urban planners running them as well. With economists, we studied financial derivatives with aim of understanding their nature and their relationship with gambling.
+To name some, I developed an algorithm for assessing accessibility in a big city using the big graphs and programmed it in MatLab. I am familiar with remote sensing techniques as well and help urban planners running them. With economists, we studied financial derivatives with aim of understanding their nature and their relationship with gambling. As well I designed a data bank for their scientific papers.
 
-I would like to enter the business as my next job and found the data analysis really interesting and relative as I already have most of its theoretical background. I am a good independent fast leaner. During the last couple of months I learned R programming and using it in data analysis. I am 
+I already am very good 
 
+I would like to enter the business sector as my next job and found the data analysis really interesting and ?relative? as I already have most of its theoretical background. I am a good independent fast leaner. During the last couple of months I learned R programming and using it in data analysis. I love the dplyr and data.table packages for their fast and efficient capability of cleaning and summarizing the data. raster is a very nice package for working with grid ?data?. For plotting one souls not underestimate the base plotting system of R but whenever it is too coding needed using it, I prefer to use ggplot2. Rmarkdown with combination of LaTex is a great tool for making reports. In machine learning techniques, neural network is really good however sometimes I found it is too slow. Random forest worked quite good. 
+
+As I agree that my resume might not be yet convincing for you to give me a full job, I would like to propose a two-month unpaid remote trainee program. I would do the jobs you expect from a data analyzer, I am sure I can rapidly learn whatever technique needed for the job. After two month I would have a job or at least a priceless experience working with your company. 
