--- a/zapier.Rmd
+++ b/zapier.Rmd
@@ -12,6 +12,13 @@ To name some, I developed an algorithm for assessing accessibility in a big city
 
 I already am very good 
 
-I would like to enter the business sector as my next job and found the data analysis really interesting and ?relative? as I already have most of its theoretical background. I am a good independent fast leaner. During the last couple of months I learned R programming and using it in data analysis. I love the dplyr and data.table packages for their fast and efficient capability of cleaning and summarizing the data. raster is a very nice package for working with grid ?data?. For plotting one souls not underestimate the base plotting system of R but whenever it is too coding needed using it, I prefer to use ggplot2. Rmarkdown with combination of LaTex is a great tool for making reports. In machine learning techniques, neural network is really good however sometimes I found it is too slow. Random forest worked quite good. 
+I would like to enter the business sector as my next job and found the data analysis really interesting and perfectly fitted to me as I already have most of the theoretical background. I am a good independent fast leaner. During the last couple of months I learned R programming and using it in data analysis as well as SQL. Plus I already am familiar with Python and would like to learn it more deeply. 
 
-As I agree that my resume might not be yet convincing for you to give me a full job, I would like to propose a two-month unpaid remote trainee program. I would do the jobs you expect from a data analyzer, I am sure I can rapidly learn whatever technique needed for the job. After two month I would have a job or at least a priceless experience working with your company. 
+In R I love the dplyr and data.table packages for their fast and efficient capability of cleaning and summarizing the data. raster is a very nice package for working with grid ?data?. For plotting one should not underestimate the base plotting system of R but whenever it is too coding needed using it, I prefer to use ggplot2. Rmarkdown in combination with LaTex is a great tool for making reports. In machine learning techniques, neural network is really good however sometimes I found it is too slow. Random forest worked quite good. 
+
+As I agree that my resume might not be yet convincing for you to give me a full job, I would like to propose a two-month unpaid remote trainee program. I would do the jobs you expect from a data analyst. I am sure I can rapidly learn whatever technique needed for the job and I haven't learned yet. After two month I would have a job or at least a priceless experience working with your company.
+
+Enclosed please find my resume and the link to my Github repository. I am looking forward to hearing from you and ready to start from April.
+
+With highest regards
+Reza Hosseini
