--- a/zapier.Rmd
+++ b/zapier.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Applying for the the data science position"
+title: "Applying for the data science position"
 author: "Reza"
 date: "March 16, 2016"
 output: html_document
@@ -10,9 +10,9 @@ Dear
 
 I am doing the last steps of my doctorate in mathematics. I have been doing research and teaching in the my field of study from the time I was doing my master. Alongside I did cooperate with experts in other fields including economists and urban planners.
 
-To name some, I developed an algorithm for assessing accessibility in cities using big graphs and programmed it in MatLab. I am familiar with by nature statistical techniques of remote sensing, as well and help urban planners running them. With economists, we studied financial derivatives with aim of understanding their nature and their relationship with gambling. Also I designed a data bank for their scientific papers.
+To name some, I developed an algorithm for assessing accessibility in cities using big graphs and programmed it in MatLab. I am familiar with by nature statistical techniques of remote sensing as well, and help urban planners running them. With economists, we studied financial derivatives with aim of understanding their nature and their relationship with gambling. Also I designed a data bank for their scientific papers.
 
-I would like to enter the business sector as my next job and found the data analysis really interesting and perfectly fitted to me as I already have most of the theoretical background. I am a good independent fast leaner. During the last couple of months I learned R programming and using it in data analysis as well as SQL. Plus I already am familiar with Python and would like to learn it more deeply. 
+I would like to enter the business sector as my next job and found the data analysis really interesting and perfectly fitted to me as I already have most of the theoretical background. I am a good independent fast leaner. During the last couple of months I learned SQL and R programming and using it in data analysis. Plus I already am familiar with Python and would like to learn it more deeply. 
 
 You can find some works of mine in my [github account](github.com/srhumir)
 
