--- a/zapier.Rmd
+++ b/zapier.Rmd
@@ -2,7 +2,7 @@
 title: "Applying for the data science position"
 author: "Reza"
 date: "March 16, 2016"
-output: html_document
+output: pdf_document
 ---
 Dear 
 
@@ -21,7 +21,61 @@ MODIS is a satellite which provide mainly two kind of products. First land surfa
 
 Briefly I computed two linear models. One to convert NDVI of SPOT to NDVI of MODIS and another to convert NDVI to LST. The first one is quite straightforward. But the second model had to be based on not all pixels but just the so called hot edge pixels. i.e. pixels which are among the hottest 5 percent when NDVI is binned in 0.3 unit intervals. Scatter plot below shows NDVI vs LST. Red dots are hot edges and green dots indicates the fitted linear model. 
 
-To refine the results, I used the fact that the temperature of a point is dependent to its surrounding points. To take into account this fact, I computed the residuals of the model above with respect to all pixels. Then put 
+ ```{r cache = T, echo = F, message = F}
+ #compute the degree two polynimial on hot edge of LST 
+#converting NDVI to LST. We also draw plot to check
+#if the hot edge pixels and ploynomial are acceptable
+polynomail <- function(NDVIMODIS, LSTMODIS){
+       ### Get hot edge pixels
+       ####Bin NDVI from 0.1 to 1 by 0.05 intervals
+       NDVIMODIS <- crop(NDVIMODIS, LSTMODIS)
+       LSTMODIS <- crop(LSTMODIS, NDVIMODIS)
+       index <- complete.cases(getValues(NDVIMODIS),getValues(LSTMODIS))
+       HotEdgepixels <- data.table(NDVI = getValues(NDVIMODIS)[index], LST = getValues(LSTMODIS)[index])
+       NDVILST <- HotEdgepixels
+       HotEdgepixels[,bin:= floor((NDVI+1)/.03)]
+       qua <- with(HotEdgepixels,tapply(LST, bin, function(x)  quantile(x,probs = 0.9,na.rm = T)))
+       a <- numeric()
+       for (i in 1:length(HotEdgepixels$NDVI)){
+              a[i] <- (HotEdgepixels$LST[i] >= qua[[as.character(HotEdgepixels$bin[i])]]) *
+                     HotEdgepixels$NDVI[i]
+       }
+       HotEdgepixels[, hotedge :=  a ]
+       HotEdgepixels[, hotedge:= as.logical(hotedge)]
+       
+       HotEdgepixels <- subset(HotEdgepixels, hotedge & NDVI > .2)
+       #draw plot for comparison
+       plot(NDVILST$NDVI, NDVILST$LST, xlab = "NDVI", ylab = "LST")
+       points(HotEdgepixels$NDVI, HotEdgepixels$LST, pch = 16, col = "red")
+       ####Fit polynomial to hot edge
+       x <- HotEdgepixels$NDVI
+       y <- HotEdgepixels$LST
+       #pol <- lm(y ~ x + I(x^2))
+       pol <- lm(y ~ x)
+       #draw a plot to check
+       v <- seq(-1,1, by = 0.05)
+       w <- pol$coefficients[1] + pol$coefficients[2] * v #+
+       #       pol$coefficients[3]* v^2 
+       points(v,w, pch = 15, col = "green")
+       pol
+}
+##1. Input data
+#x <- matrix(rnorm(400), 20)
+#y<- matrix(rnorm(400), 20)
+
+library(raster)
+library(data.table)
+#print("chosse NDVI of MODIS of resolution equal to LST")
+NDVIMODIS <- raster(file.choose())
+#print("choose LST of MODIS")
+LSTMODIS <- raster(file.choose())
+
+pol <- polynomail(NDVIMODIS, LSTMODIS)
+
+ ```
+
+To refine the results, I used the fact that the temperature of a point is dependent to its surrounding points. To take into account this fact, I computed the residuals of the model above with respect to all pixels. Then trained a neural network with with NDVI of each pixel and its eight suroonding pixels as input and the pixels residual as output.
+
 
 
 
