--- a/metro.tex
+++ b/metro.tex
@@ -9,13 +9,15 @@
 \documentclass[11pt,a4paper,sans]{moderncv}        % possible options include font size ('10pt', '11pt' and '12pt'), paper size ('a4paper', 'letterpaper', 'a5paper', 'legalpaper', 'executivepaper' and 'landscape') and font family ('sans' and 'roman')
 
 % moderncv themes
-\moderncvstyle{banking}                            % style options are 'casual' (default), 'classic', 'oldstyle' and 'banking'
+\moderncvstyle{classic}                            % style options are 'casual' (default), 'classic', 'oldstyle' and 'banking'
+\addtolength{\topmargin}{-1.9cm}
 \moderncvcolor{red}                              % color options 'blue' (default), 'orange', 'green', 'red', 'purple', 'grey' and 'black'
 %\renewcommand{\familydefault}{\sfdefault}         % to set the default font; use '\sfdefault' for the default sans serif font, '\rmdefault' for the default roman one, or any tex font name
 %\nopagenumbers{}                                  % uncomment to suppress automatic page numbering for CVs longer than one page
 
 % character encoding
 \usepackage[utf8]{inputenc} % if you are not using xelatex ou lualatex, replace by the encoding you are using
+%\usepackage{hyperref}
 %\usepackage{CJKutf8}                              % if you need to use CJK to typeset your resume in Chinese, Japanese or Korean
 
 % adjust the page margins
@@ -55,22 +57,21 @@
 \date{May 17, 2016}
 \opening{\textbf{Applying for  Strategic Research Internship (Reference number: M/16-00076)}\\Dear Mrs. Katharina Poschen,}
 \closing{With Highest Regards,}
-\enclosure[Attached]{curriculum vit\ae{}}          % use an optional argument to use a string other than "Enclosure", or redefine \enclname
+\enclosure[Attached: ]{Curriculum Vit\ae{}}          % use an optional argument to use a string other than "Enclosure", or redefine \enclname
 \makelettertitle
 
 I am writing to express my interest in spending an internship with Metro AG in strategic research. I am currently doing the last steps of doctorate in Mathematics in FSU Jena Germany. I have four years experience as research employee and five years teaching experience as well as several years of cooperation with experts in other fields including urban planning and economists.
 
-Now after several years of mainly doing academic jobs, I would like to enter into a more practical yet active sector and found the business analysis really interesting and perfectly fitted to my theoretical background. I did several courses in Statistics, Statistical inference, Operational Research, Exploratory Data Analysis,  Machine learning, Introduction to Big Data, Programming and Data structures as well as data banks and SQL. I am already expert in MS Office intermediate in R and familiar with python. Some works of mine are available in my [github page]{https://github.com/srhumir}. 
+Now after several years of mainly doing academic jobs, I would like to enter into a more practical yet active sector and found the business analysis really interesting and perfectly fitted to my theoretical background. I did several courses in Statistics, Statistical inference, Operational Research, Exploratory Data Analysis,  Machine learning, Introduction to Big Data, Programming and Data structures as well as data banks and SQL. I am already expert in MS Office, intermediate in R and familiar with python. Some works of mine are available in my  \href{https://github.com/srhumir}{\textcolor{blue}{\underline{github page}}}. 
 
-In terms of working experience, I have thought various topics of mathematics from linear algebra to differential equations and analysis. I also cooperated with urban planners to develop algorithms for assessing accessibility in cities using big graphs and I programmed it in MatLab. Through which I gained experience in spatial analysis especially working with ArcGIS software package. I also am familiar with, by nature statistical, techniques of remote sensing, and help urban planners running them through R programming. Furthermore, with economists, we studied financial derivatives with aim of understanding their nature and their relationship with gambling.
+In terms of working experience, I have thought various topics of mathematics from abstract algebra to differential equations and analysis. I also cooperated with urban planners to develop an algorithm for assessing accessibility in cities using big graphs and I programmed it in MatLab. Through which I gained experience in spatial analysis especially working with ArcGIS software package. I also am familiar with, by nature statistical, techniques of remote sensing, and help urban planners running them through R programming. Furthermore, with economists, we studied financial derivatives with aim of understanding their nature and their relationship with gambling.
 
-In terms of transferable skills, I learned how to translate real world problems into mathematical statements and vice versa as the key as well as cooperation with other areas. I am confident in my analyzing and problem solving abilities as key skills in mathematics. I did cooperated with teams of different scientific and social backgrounds. Also for several years I thought mathematics to students of various scientific and social backgrounds through which you have to be enormously patient, friendly and understanding as well as being able to express complicated problems in understandable manners. Last but not least, I am an independent fast leaner and capable of finding the way the jobs are done using online resources.
+In terms of transferable skills, I am confident in my analysing and problem solving abilities as key skills in mathematics. I learned how to translate real world problems into mathematical statements and vice versa while cooperating with other professions as well as math work.  I did cooperate in teams with diverse skills. Also for several years I thought mathematics to students of various scientific and social backgrounds through which you have to be enormously patient, friendly and understanding as well as being able to express complicated problems in understandable manners. Last but not least, I am an independent fast leaner and capable of finding the best way jobs are done using available resources.
 
-Because of my thesis work, I can not yet work full time.  Plus working with the interesting, creative and creditable Zapier is a huge opportunity to earn invaluable experiment and credit for my career prospect. So I would like to propose a two-month unpaid remote trainee program. I would do the jobs you expect from a data analyst. I am sure I can rapidly learn whatever needed for the job and I haven't learned yet.
 
-Enclosed please find my resume and a sample report of a work of mine. I am looking forward to hearing from you and ready to start at at s soon as needed.
 
- I appreciate your time and consideration and am looking forward to meet you as your first convinience. I am reachable through abovely mensioned email address and cell number.
+
+ I appreciate your time and consideration and am looking forward to meet you as your first convenience. I am reachable through abovely mentioned email address and cell number.
  \vspace{3mm}
  
 \makeletterclosing
