metro first version

--- a/metro.tex
+++ b/metro.tex
@@ -10,8 +10,9 @@
 
 % moderncv themes
 \moderncvstyle{classic}                            % style options are 'casual' (default), 'classic', 'oldstyle' and 'banking'
-\addtolength{\topmargin}{-1.9cm}
-\moderncvcolor{red}                              % color options 'blue' (default), 'orange', 'green', 'red', 'purple', 'grey' and 'black'
+
+
+\moderncvcolor{red}                             % color options 'blue' (default), 'orange', 'green', 'red', 'purple', 'grey' and 'black'
 %\renewcommand{\familydefault}{\sfdefault}         % to set the default font; use '\sfdefault' for the default sans serif font, '\rmdefault' for the default roman one, or any tex font name
 %\nopagenumbers{}                                  % uncomment to suppress automatic page numbering for CVs longer than one page
 
@@ -21,7 +22,7 @@
 %\usepackage{CJKutf8}                              % if you need to use CJK to typeset your resume in Chinese, Japanese or Korean
 
 % adjust the page margins
-\usepackage[scale=0.75]{geometry}
+\usepackage[scale=0.75, top=2cm, bottom=.8cm]{geometry}
 %\setlength{\hintscolumnwidth}{3cm}                % if you want to change the width of the column with the dates
 %\setlength{\makecvtitlenamewidth}{10cm}           % for the 'classic' style, if you want to force the width allocated to your name and avoid line breaks. be careful though, the length is normally calculated to avoid any overlap with your personal info; use this at your own typographical risks...
 
@@ -57,21 +58,19 @@
 \date{May 17, 2016}
 \opening{\textbf{Applying for  Strategic Research Internship (Reference number: M/16-00076)}\\Dear Mrs. Katharina Poschen,}
 \closing{With Highest Regards,}
-\enclosure[Attached: ]{Curriculum Vit\ae{}}          % use an optional argument to use a string other than "Enclosure", or redefine \enclname
+%\enclosure[Attachments]{Curriculum Vit\ae{}}          % use an optional argument to use a string other than "Enclosure", or redefine \enclname
 \makelettertitle
 
 I am writing to express my interest in spending an internship with Metro AG in strategic research. I am currently doing the last steps of doctorate in Mathematics in FSU Jena Germany. I have four years experience as research employee and five years teaching experience as well as several years of cooperation with experts in other fields including urban planning and economists.
 
-Now after several years of mainly doing academic jobs, I would like to enter into a more practical yet active sector and found the business analysis really interesting and perfectly fitted to my theoretical background. I did several courses in Statistics, Statistical inference, Operational Research, Exploratory Data Analysis,  Machine learning, Introduction to Big Data, Programming and Data structures as well as data banks and SQL. I am already expert in MS Office, intermediate in R and familiar with python. Some works of mine are available in my  \href{https://github.com/srhumir}{\textcolor{blue}{\underline{github page}}}. 
+Now after several years of mainly doing academic jobs, I would like to switch into a more practical yet active sector and found the business analysis really interesting and perfectly fitted to my theoretical background. I did several courses in Statistics, Statistical inference, Operational Research, Exploratory Data Analysis,  Machine learning, Introduction to Big Data, Programming and Data structures as well as data banks and SQL. I am already expert in MS Office, intermediate in R and familiar with python. Some works of mine are available in my  \href{https://github.com/srhumir}{\textcolor{blue}{\underline{github page}}}. 
 
-In terms of working experience, I have thought various topics of mathematics from abstract algebra to differential equations and analysis. I also cooperated with urban planners to develop an algorithm for assessing accessibility in cities using big graphs and I programmed it in MatLab. Through which I gained experience in spatial analysis especially working with ArcGIS software package. I also am familiar with, by nature statistical, techniques of remote sensing, and help urban planners running them through R programming. Furthermore, with economists, we studied financial derivatives with aim of understanding their nature and their relationship with gambling.
+In terms of working experience, I have thought various topics of mathematics from abstract algebra to differential equations and analysis. I also cooperated with economists to study financial derivatives with aim of understanding their nature and relationship with gambling. Together urban planners we develop an algorithm for assessing accessibility in cities using big graphs and I programmed it in MatLab. Through which I gained experience in spatial analysis especially working with ArcGIS software package. I also am familiar with, by nature statistical, techniques of remote sensing, and help urban planners running them through R programming.
 
-In terms of transferable skills, I am confident in my analysing and problem solving abilities as key skills in mathematics. I learned how to translate real world problems into mathematical statements and vice versa while cooperating with other professions as well as math work.  I did cooperate in teams with diverse skills. Also for several years I thought mathematics to students of various scientific and social backgrounds through which you have to be enormously patient, friendly and understanding as well as being able to express complicated problems in understandable manners. Last but not least, I am an independent fast leaner and capable of finding the best way jobs are done using available resources.
+In terms of transferable skills, I am confident in my analysing and problem solving abilities as key skills in mathematics. I learned how to translate real world problems into mathematical statements and vice versa while cooperating with other professions as well as math work. I did cooperate in teams with diverse skills. Also for several years I thought mathematics to students of various scientific and social backgrounds through which you have to be enormously patient, friendly and understanding as well as being able to express complicated problems in understandable manners. Last but not least, I am an independent fast leaner and capable of finding the best way jobs are done using available resources.
 
-
-
-
- I appreciate your time and consideration and am looking forward to meet you as your first convenience. I am reachable through abovely mentioned email address and cell number.
+I have studied well and have a lot of theoretical information regarding data analysis. I believe that working in a professional team of experts in a supreme corporation like Metro is a great opportunity to get real work experience for a new career. I have German work permit and am ready to start as soon as desired. Beside very good English knowledge, I can also speak good German. 
+ I appreciate your time and consideration and am looking forward to meet you as your first convenience.
  \vspace{3mm}
  
 \makeletterclosing
