--- a/moderncvstyleclassic.sty
+++ b/moderncvstyleclassic.sty
@@ -277,8 +277,8 @@
 %  \\[1em]% UK style
   \@date\\[2em]% US informal style: "January 1, 1900"; UK formal style: "01/01/1900"
   % opening
-  \raggedright%
-  \@opening\\[1.5em]%
+  {\raggedright%
+  \@opening\\[1.5em]}%
   % ensure no extra spacing after \makelettertitle due to a possible blank line
 %  \ignorespacesafterend% not working
   \hspace{0pt}\par\vspace{-\baselineskip}\vspace{-\parskip}}
